# fizzbuzz-clion

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  GameNumber.cpp  GameNumber.h
test/: CMakeLists.txt  GameNumberTest.cpp
